--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.svg" alt="..." /></a>
+                <a class="navbar-brand" href="#page-top"><img src="assets/img/cornerLogo.png" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -243,6 +243,7 @@
             </div>
         </section>
         <!-- Team-->
+        <!--
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
@@ -286,7 +287,11 @@
                 </div>
             </div>
         </section>
+
+        -->
+
         <!-- Clients-->
+        <!--
         <div class="py-5">
             <div class="container">
                 <div class="row align-items-center">
@@ -305,6 +310,7 @@
                 </div>
             </div>
         </div>
+        -->
         <!-- Contact-->
         <section class="page-section" id="contact">
             <div class="container">
