--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="#page-top"><img src="assets/img/cornerLogo.png" alt="..." /></a>
+                <a class="navbar-brand" href="#page-top"><img src="assets/img/cornerLogo.jpg" alt="..." /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -41,7 +41,11 @@
             <div class="container">
                 <div class="masthead-subheading">You found us!</div>
                 <div class="masthead-heading text-uppercase">You're TOO early :) Come back soon for whitelists</div>
-                <a class="btn btn-primary btn-xl text-uppercase" href="#services">Tell Me More</a>
+                <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio">Portfolio</a>
+            </div>
+            <<div class="container">
+              <a class="btn btn-primary btn-xl text-uppercase" href="https://opensea.io">our OpenSea!</a>
+
             </div>
         </header>
         <!-- Services-->
