fixed spacing on buttons for opensea link

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
                 <div class="masthead-heading text-uppercase">You're TOO early :) Come back soon for whitelists</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio">Portfolio</a>
             </div>
-            <<div class="container">
+            <br>
+            <div class="container">
               <a class="btn btn-primary btn-xl text-uppercase" href="https://opensea.io">our OpenSea!</a>
 
             </div>
