opensea new tab update'

--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
                 <div class="masthead-heading text-uppercase">You're TOO early :) Come back soon for whitelists</div>
                 <a class="btn btn-primary btn-xl text-uppercase" href="#portfolio">Portfolio</a>
             </div>
-            <br>
+            <br
             <div class="container">
-              <a class="btn btn-primary btn-xl text-uppercase" href="https://opensea.io">our OpenSea!</a>
-
+              <a class="btn btn-primary btn-xl text-uppercase" href="https://opensea.io" target="_blank" rel="noopener noreferrer">our OpenSea!</a>
             </div>
         </header>
         <!-- Services-->
